# dlrs-auth

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  issues.md  issues_management.md  project_management.md  pyproject.toml  todo_list.md
.github/: copilot-instructions.md
.github/agents/: sofia.agent.md
.github/prompts/: analise-padroes.prompt.md  issue.prompt copy.md  issue.prompt.md
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  health.py
app/core/: config.py
app/domain/: token.py  user.py
app/infrastructure/: interfaces.py  postgres_adapter.py  rabbitmq_adapter.py  redis_client.py
app/use_cases/: auth.py
docs/desenvolvimento/: index.md
docs/desenvolvimento/padrões-de-desenvolvimento/: boas-praticas.md  padroes.md
docs/panejamento/: issues.md  roadmap.md  sprints.md
docs/segurança/: index.md
docs/segurança/padrões-de-segurança/: boas-praticas-seguranca.md  padroes-seguranca.md
docs/testes/: index.md
docs/testes/padrões-de-testes/: boas-praticas.md  padroes.md
tests/: conftest.py
tests/api/: test_health.py
tests/domain/: test_token.py  test_user.py
tests/infrastructure/: test_postgres_adapter.py  test_rabbitmq_adapter.py  test_redis_client.py
tests/integration/: conftest.py  test_auth_flow.py
tests/use_cases/: __init__.py  test_auth.py
